--- a/CldvExample/Views/Shared/_Layout.cshtml
+++ b/CldvExample/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
 
         .search-button {
             padding: 8px 16px;
-            background-color: #6495ed;
+            background-color: #fff;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -127,7 +127,7 @@
         }
 
             .search-button:hover {
-                background-color: #4169e1;
+                background-color: #fff;
             }
     </style>
 </head>
@@ -144,16 +144,31 @@
                     <ul class="navbar-nav ms-auto">
                         <!-- Existing nav links -->
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Cart" asp-action="Index">
-                                Shopping Cart
-
+                            <a class="nav-link" asp-controller="Home" asp-action="AboutUs">
+                                About Us
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Order" asp-action="ViewOrders">Orders</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="MyWork">
+                                My Work
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="ContactUs">
+                                Contact Us
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Order">Order</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Home" asp-action="Cart">Cart</a>
                         </li>
                         <!-- Add conditional display for admin link -->
                         @if (User.IsInRole("Admin"))
@@ -184,19 +199,7 @@
                             </li>
                         }
                         <!-- End of conditional display -->
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyWork">My Work</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Order" asp-action="PlaceOrder">PlaceOrder</a>
-                        </li>
+                        
 
                 </div>
             </div>
